variables fixed, working on spacing

--- a/_sass/header/_header.scss
+++ b/_sass/header/_header.scss
@@ -14,11 +14,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    height: 48px;
   }
 
   .site-title {
-    font-size: 16px;
-    // font-weight: bold;
     text-decoration: none;
     color: var(--text-color);
   }
